--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -597,7 +597,7 @@
     " where $c_1$ and $c_2$ $\\in C$. The two constants represent a quantity called the amplitude, which when squared, gives the probability of getting the state associated with it. In other words, $c_1^2$ is the probability of getting a 0 and $c_2^2$ is the probability of getting a 1. And since there's a 100% probability of getting either a 0 or a 1, then the following must be true\n",
     " \n",
     " \\begin{equation}\n",
-    " c_1^2 + c_2^2 = 1\n",
+    " |c_1|^2 + |c_2|^2 = 1\n",
     " \\end{equation}\n",
     " \n",
     "This is essentially the language of quantum information theory, kets and amplitudes. Anything that changes the amplitudes is called an operator, but that's a lesson for another chapter.\n",
@@ -677,8 +677,7 @@
     "print('<u|u> =', int(abs(bracket)))\n",
     "\n",
     "\n",
-    "#Excercise: Create a function that takes an np.array, turns that into a ket, and gets the inner product via a bracket\n",
-    "\n"
+    "#Excercise: Create a function that takes in 2 np.array inputs,turn one into a bra and other into a ket and evaluate the inner product\n"
    ]
   },
   {
@@ -1027,7 +1026,7 @@
     "   c_1 = c_2 = c_3 = \\ldots = c_n = 0\n",
     "   \\end{equation}\n",
     "   \n",
-    "   If the equation above is satisfied when any $c$ value $\\neq 0$, then the vectors are linearly independent."
+    "   If the equation above is satisfied when any $c$ value $\\neq 0$, then the vectors are linearly dependent."
    ]
   },
   {
@@ -1172,7 +1171,7 @@
     "|\\Psi> = \\psi_1 |1> + \\psi_2 |2> + \\ldots + \\psi_n |n> = \\sum_{i=1}^n \\psi_i|i>\n",
     "\\end{equation}\n",
     "   \n",
-    "   As stated above, $\\psi_1 ^2$ is the probability of finding a system in state 1, $\\psi_2^2$ is the probability of finding a particle in state 2 and so on. From there, it would be easy to deduce that the sum of all the amplitudes squared, or $\\sum_{i=1}^n |\\psi_i^2|$ must be equal to the total probability of the system, which should be 1. However, remember that according to Section 1.2, $|\\psi_i^2| = \\psi_i^* \\psi_i$, which means that the sum of all amplitudes multiplied by their corresponding conjugates must equal 1. Recall that this essentially means that the norm of the vector is 1, which, when written out in Dirac Notation, takes the following form:\n",
+    "   As stated above, $|\\psi_1|^2$ is the probability of finding a system in state 1, $|\\psi_2|^2$ is the probability of finding a particle in state 2 and so on. From there, it would be easy to deduce that the sum of all the amplitudes squared, or $\\sum_{i=1}^n |\\psi_i|^2$ must be equal to the total probability of the system, which should be 1. However, remember that according to Section 1.2, $|\\psi_i|^2 = \\psi_i^* \\psi_i$, which means that the sum of all amplitudes multiplied by their corresponding conjugates must equal 1. Recall that this essentially means that the norm of the vector is 1, which, when written out in Dirac Notation, takes the following form:\n",
     "   \n",
     "   \\begin{equation}\n",
     "   <\\Psi|\\Psi> = 1\n",
@@ -1216,13 +1215,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0],\n",
+       "       [1, 0]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Go nuts here\n",
+    "zero = bra(np.array([1,0]))\n",
+    "one = ket(np.array([0,1]))\n",
+    "\n",
+    "ketbra(zero,one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Go nuts here:\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
