--- a/Chapter 2 - Math Tools II (Matrices and Operators).ipynb
+++ b/Chapter 2 - Math Tools II (Matrices and Operators).ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -762,9 +762,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4 Matrix Representation of Linear Operators\n",
+    "## 2.4 Matrix Representation of Linear Operators \n",
     "\n",
-    "We have stated what a linear operator is and some basic rules of operator algebra, but we still have not described how to properly represent them. For linear operators (i.e the operators we are concerned with), a very effective way to represent an operator which acts on a $n$-dimensional vector is by an $n \\times n$ square matrix. \n",
+    "We have stated what a linear operator is and have presented some basic rules of operator algebra, but we still have not described how to properly represent them. For linear operators (i.e the operators we are concerned with), a very effective way to represent an operator which acts on a $n$-dimensional vector is by an $n \\times n$ square matrix. \n",
     "\n",
     "For instance, if one were to transform a 3D vector $|u>$ to $|v>$, as follows\n",
     "\n",
@@ -781,12 +781,15 @@
     "\n",
     "Using the rules of matrix multiplication described in Section 1.1, one would find this to be true (in fact if you're new to this, I would encourage trying it out manually).\n",
     "\n",
-    "The components of the matrix representing the linear transformation can be obtained as follows in a general case:\n",
     "\n",
+    "Generally, an $n \\times n$ matrix transforms an $n$-vector where the $i$th column of the matrix is what the $i$th basis vector is mapped to. To demonstrate this, I will use new notation which makes it more obvious. Previously, an object in a matrix was described by $M_{ij}$, where $i$ is the row index and $j$ is the column index. Alternatively, a matrix component will now be written as $j_i$, where the column index is represented by a letter, not a number. For instance, the 3 $\\times$ 3 example is\n",
+    "\n",
+    "\\begin{equation}\n",
+    "M|u> = |v> \\newline\n",
+    "\\begin{pmatrix} a_1 & b_1 & c_1 \\\\\\ a_2 & b_2 & c_2 \\\\\\ a_3 & b_3 & c_3 \\end{pmatrix}\\begin{pmatrix} x\\\\y\\\\z\\end{pmatrix}  = \\begin{pmatrix} a_1x + a_2y + a_3z \\\\\\ b_1x + b_2y + b_3z \\\\\\ c_1x + c_2y + c_3z \\end{pmatrix}\n",
+    "\\end{equation}\n",
     " \n",
-    " \n",
-    " \n",
-    " \n",
+    " As you can see, the $i$th components of the $|v>$ is the linear combination of the vector components of $|u>$, where the scalars are the components of the $i$th row of matrix (linear operator) $M$\n",
     " \n",
     " ### Python Implementation"
    ]
@@ -902,7 +905,7 @@
     "A = np.array([[1,0,3,4],[1,1,1,1],[0,9,2,-1]])\n",
     "B = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16]])\n",
     "psi = np.array([1,2,3,4])\n",
-    "phi= A @ B @ psi\n",
+    "phi= A@B@psi\n",
     "\n",
     "print('|phi> = ','AB|psi> = ')\n",
     "view(phi)\n"
@@ -1124,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1462,7 @@
        "array([1., 2., 3.])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1720,7 @@
        "True"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1847,7 @@
     "|\\psi> = \\begin{pmatrix}0.7071067 \\\\\\ 0.7071067 \\end{pmatrix} \\newline = 0.7071067|0> + 0.7071067|1>\n",
     "\\end{equation}\n",
     "\n",
-    "Remember that the terms two terms in the statevector represent $\\alpha$ and $\\beta$. Also remember that $\\alpha^2$ and $\\beta^2$ represent the probabilities of obtaining a 0 and 1, respectively.\n",
+    "Remember that the two terms in the statevector represent $\\alpha$ and $\\beta$. Also remember that $\\alpha^2$ and $\\beta^2$ represent the probabilities of obtaining a 0 and 1, respectively.\n",
     "\n",
     "This means that before applying unitary operator $H$:\n",
     "\n",
@@ -1860,30 +1863,258 @@
     "\\beta^2 = 0.7071067^2 = 0.5\n",
     "\\end{equation}\n",
     "\n",
-    "In other words, the qubit went from having 100% chance to be measured at 0 to a 50/50 percent chance to be a 0 or 1. Physically, what has happened is that we changed the probability of the qubit ending up in either the two possible states it can be in. And this is not the equivilent to a coin flip because a coin flip lands in heads or tails according to how much force was applied and can be predicted every time given a measurement device that has been programed to understand basic physics, whilst in this case, we are exploiting the intrinsically random nature of the universe to set up a qubit state to do what we want. Friendly advice: If you don't find this fascinating or mind-blowing, you might want to reconsider quantum computing as a whole."
+    "In other words, the qubit went from having 100% chance to be measured at 0 to a 50/50 percent chance to be a 0 or 1. Physically, what has happened is that we changed the probability of the qubit ending up in either the two possible states it can be in. And this is not the equivilent to a coin flip because a the result of a coin flip is based on how much force was applied on the coin and can be predicted every time using Newton's Laws and a measurement device that is accurate enough, whilst in this case we are exploiting the intrinsically random nature of the universe to set up a qubit state to do what we want! \n",
+    "\n",
+    "Friendly advice: If you don't find this fascinating or mind-blowing, you might want to reconsider quantum computing as a whole."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.11 Projection Operators"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.12 Tensor Products"
+    "## 2.11 Eigenvalues\n",
+    "\n",
+    "One of the key takeaways of this chapter is that a matrix can be used as a \"function\" (more specifically, operator) in the sense where it can produce an output vector from an input one (by means of matrix multiplication). The topic of eigenvalues and eigenvectors arise when we consider only the linear transformations where the input and output vectors are in the same direction, as shown in the following figure:\n",
+    "\n",
+    "  <img src=\"assets/scale.png\">\n",
+    "\n",
+    "Here, you can see that the only difference between $\\vec{A}$ and $\\vec{B}$ is the length, or in other words\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\vec{B} = \\lambda \\vec{A}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $\\lambda$ is a scalar that represents the ratio bewtween the length of $\\vec{A}$ and the length of $\\vec{B}$.\n",
+    "\n",
+    "Now let us say we want to transform $\\vec{A}$ to $\\vec{B}$, which as described in Section 2.4, can be written out as follows:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "O\\vec{A} = \\vec{B}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $O$ is a matrix.\n",
+    "\n",
+    "But remember that $\\vec{B}$ is simply a scalar product of $\\vec{A}$, which means that we can write the linear transformation as \n",
+    "\n",
+    "\\begin{equation}\n",
+    "O\\vec{A} = \\lambda \\vec{A}  \n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "In other words, the effect of multiplying a vector by matrix $O$ is the same as multiplying it by constant $\\lambda$. In such a case, $\\lambda$ is what is called the eigenvalue of $O$. \n",
+    "\n",
+    "Let's say we have vector $|\\psi>$ and and matrix $M$, where the following relationship applies:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "M|\\psi> = \\lambda |\\psi>\n",
+    "\\end{equation}\n",
+    "\n",
+    "A key thing to notice is that the relationship above can be re-written as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "(M - \\lambda I_n)|\\psi> = 0\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $I_n$ is an $n \\times n$ identity matrix.\n",
+    "\n",
+    "This could be used to find $\\lambda$ because $M - I_n \\lambda$ is a matrix that, by definition, must have a determinant of 0. Using the fact that $det(M - I_n \\lambda) = 0$, one can get a polynomial of degree $n$, where its roots are the eigeinvalues of $M$, as done <a href=\"https://www.youtube.com/watch?v=j2B_vcp3tUQ&t=239s\">here in a 3x3 case</a>. Using the fundamental theorem of algebra, we can deduce that an $n \\times n$ matrix will have $n$ eigeinvalues. \n",
+    "\n",
+    "Another important relationship is that the sum of all eigenvalues is equal to the trace of $M$. Or, \n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\sum_{i = 1}^n \\lambda_i = Tr(M)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Eigenvalue of Unitary Matrix\n",
+    "\n",
+    "In Section 2.10, a specific type of square matrix was introduced, a Unitary matrix, which preserves the length of a vector when operated on it. It was also said that in quantum mechanics, all operators must be unitary because they must preserve the length of the statevector it acts on (which must be 1, as it represents the total probability). \n",
+    "\n",
+    "The eigenvalue of a unitary matrix must always have a norm of 1. If $U \\in R^{n \\times n}$, then it's eigenvalue will be $\\pm$ 1, but in the case of a complex matrix (i.e $U \\in C^{n \\times n}$), then its eigenvalues could be any value which lies in the unit circle in an argand diagram. This property is used in an imporant quantum algorithm called the Phase Estimation Algorithm (PEA) which will be discussed in a few chapters.\n",
+    "\n",
+    "### Python Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\1 & 5 & 0\\\\0 & 1 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1, 2, 3],\n",
+       "[1, 5, 0],\n",
+       "[0, 1, 1]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "M has 3 eigenvalues:\n",
+      "[5.5797401 +0.j         0.71012995+0.75566815j 0.71012995-0.75566815j]\n",
+      "\n",
+      "Math works! Sum of eig(M) = Tr(M)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Finding the eigenvalues of 3x3 matrix M\n",
+    "\n",
+    "M = np.array([[1,2,3],[1,5,0],[0,1,1]])\n",
+    "lambda_M = np.linalg.eigvals(M)\n",
+    "\n",
+    "print('M = ')\n",
+    "view(M)\n",
+    "\n",
+    "print('')\n",
+    "print('M has 3 eigenvalues:')\n",
+    "\n",
+    "print(lambda_M)\n",
+    "\n",
+    "print('')\n",
+    "\n",
+    "#Checking to see whether the sum of eigenvalues is equal to the trace\n",
+    "\n",
+    "if lambda_M.sum() == M.trace():\n",
+    "    print('Math works! Sum of eig(M) = Tr(M)')\n",
+    "else:\n",
+    "    print('Whoops.  math doesnt work... nothing does')\n",
+    "\n",
+    "\n",
+    "#Excercise: Construct a function that outputs the same result as np.linalg.eigvals. Use the method laid out above or\n",
+    "#any numerical method of your choice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.12 Tensor Products\n",
+    "\n",
+    "### Kronecker Product vs. Outer Product\n",
+    "Another important mathematical concept that one would very likely find themselves using in quantum computing and quantum information is the Tensor Product. Whilst the name may sound foreign to you, it is actually something that has already been discussed in this series. Specifically in Section 1.7, where the outer product was discussed. It was said that if one were to get the ket-bra of two vectors $|u>$ and $|v>$, say, both $\\in R^3$, the following matrix would be the outcome:\n",
+    "\n",
+    "   \\begin{equation}\n",
+    "  |u><v| = \\begin{pmatrix}v_1^*u_1 & v_2^*u_1 & v_3^*u_1 \\\\\\ v_1^*u_2 & v_2^*u_2 & v_3^*u_2 \\\\\\ v_1^*u_3 & v_2^*u_3& v_n^*u_3\\end{pmatrix}\n",
+    "   \\end{equation}\n",
+    "   \n",
+    "This is called the density matrix and it is result of the outer tensor product (also denoted by $\\vec{u} \\otimes_{outer} \\vec{v}$). However, there is another type of tensor product called the Kronecker Product (denoted by $\\vec{u} \\otimes_{kron} \\vec{v}$ or simply, $\\vec{u} \\otimes \\vec{v}$), which is equivilent to the result obtained in the density matrix, but packaged in a different shape. When the word tensor product is used, it is most likely referring to the kronecker product\n",
+    "\n",
+    "The outer product inputs two vectors of dimensions $n$ and $m$ and outputs an $n \\times m$ matrix. The kronecker product, on the other hand, inputs two vectors of dimensions $n$ and $m$, and produces a new vector of dimensions $nm$. \n",
+    "\n",
+    "### Calculating Tensor Products\n",
+    "\n",
+    "Like many topics in linear algebra, one would find that tensor products are much easier to compute than to describe formally. For this reason, I will take a more mechanical and practical approach to explaining how to evaluate a tensor product, as its crude utilization is the only thing that will be necessary in this series. \n",
+    "\n",
+    "To get the tensor product of vectors $\\vec{u}$ and $\\vec{v}$ ($\\vec{u} \\in R^n$ and $\\vec{v} \\in R^m$), all you have to do is scalar multiply the first component of $\\vec{u}$ with vector $\\vec{v}$, and repeat the process for all components of $\\vec{u}$. You'll find that you have now made $n$ new vectors. Merge them. The result is the $\\vec{u} \\otimes \\vec{v}$. In the case that the vectors are complex, do the same but with the complex conjugates of $u_i$.\n",
+    "\n",
+    "If that description is not adequate enough for you to understand, hopefully this example with 2 and 3 dimensional complex vectors will work:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\vec{u} \\otimes \\vec{v} = \\begin{pmatrix} u_1^* \\\\\\ u_2^*\\end{pmatrix} \\otimes \\begin{pmatrix} v_1 \\\\\\ v_2 \\\\\\ v_3\\end{pmatrix} \\newline  = \\begin{pmatrix} u_1^* \\begin{bmatrix} v_1 \\\\\\ v_2 \\\\\\ v_3\\end{bmatrix} \\\\\\ u_2^* \\begin{bmatrix} v_1 \\\\\\ v_2 \\\\\\ v_3 \\end{bmatrix} \\end{pmatrix} = \\begin{pmatrix} u_1^* v_1 \\\\\\ u_1^* v_2 \\\\\\ u_1^* v_3 \\\\\\ u_2^* v_1 \\\\\\ u_2^* v_2  \\\\\\ u_2^* v_3\\end{pmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "One can find that this is essentially stacking up the terms columns of the density matrix into one.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "\n",
+    "  <img src=\"assets/kron.png\" style=\"width: 500px;\">\n",
+    "  \n",
+    "  The result is a 6-vector.\n",
+    "  \n",
+    "\n",
+    "  \n",
+    "### Using Tensor Products to Extend to Multiple Qubit Systems\n",
+    "\n",
+    "In Section 1.10, it was stated that one of the key differences between describing classical and quantum information is that classical information is described by a series of 1s and 0s, whilst quantum information is described by a vector which describes the probability of obtaining any possible series of 1s or 0s.\n",
+    "\n",
+    "The basic unit of this quantum logic is called a qubit which is a linear combination of two basis vectors which represent the possible states: $|0>$ and $|1>$, where $|0> = \\begin{pmatrix} 1 \\\\\\ 0\\end{pmatrix}$ and $|1> = \\begin{pmatrix} 0 \\\\\\ 1\\end{pmatrix}$.\n",
+    "\n",
+    "However, one cannot go very far with one qubit and nearly all quantum algorithms require multiple qubits, and this is where the tensor product comes in. Suppose one would want to describe the $|10>$ state (which is 2 in binary). To do this, one would have to take the tensor product of the two qubit states which make up |10>, |1> and |0>. So\n",
+    "\n",
+    "\\begin{equation}\n",
+    "|10> = |1> \\otimes |0> \\newline = \\begin{pmatrix} 0 \\\\\\ 1 \\end{pmatrix} \\otimes \\begin{pmatrix} 1 \\\\\\ 0 \\end{pmatrix} \\newline = \\begin{pmatrix} 0 \\begin{bmatrix} 1 \\\\\\ 0\\end{bmatrix} \\\\\\ 1 \\begin{bmatrix} 1 \\\\\\ 0\\end{bmatrix} \\end{pmatrix} \\newline = \\begin{pmatrix}  0 \\\\\\ 0 \\\\\\ 1 \\\\\\ 0 \\end{pmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "The 4-dimensional statevector obtained above represents the basis vector |01>, where as you can see, all terms are zero except for the third component, which is 1. Generally, the result will be a $2^n$ dimensional statevector, where $n$ is the number of qubits and all the terms are zero except for the $i + 1$th index, where $i$ is the number in decimal. \n",
+    "\n",
+    "Note to Adam: Rewrite the fuck out of this. Start with 1 qubit statevector and move from there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u = [1 2 3], v = [4 5]\n",
+      "u ⊗ v =  [ 4  5  8 10 12 15]\n",
+      "|u><v| = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}4 & 5\\\\8 & 10\\\\12 & 15\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 4,  5],\n",
+       "[ 8, 10],\n",
+       "[12, 15]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Tensor Product \n",
+    "\n",
+    "u = np.array([1,2,3])\n",
+    "v = np.array([4,5])\n",
+    "\n",
+    "outerProd = np.outer(u,v)\n",
+    "kronProd = np.kron(u,v)\n",
+    "\n",
+    "print('u = [1 2 3], v = [4 5]')\n",
+    "print('u ⊗ v = ', kronProd)\n",
+    "print('|u><v| = ')\n",
+    "view(outerProd)\n",
+    "\n",
+    "#Excercise: Create a function that does the same as np.kron() (Hint: Two for loops and np.append())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Go nuts here:\n",
+    "\n",
     "\n"
    ]
   }
