--- a/Chapter 2 - Math Tools II (Matrices and Operators).ipynb
+++ b/Chapter 2 - Math Tools II (Matrices and Operators).ipynb
@@ -2057,7 +2057,7 @@
     "\n",
     "The 4-dimensional statevector obtained above represents the basis vector |01>, where as you can see, all terms are zero except for the third component, which is 1. Generally, the result will be a $2^n$ dimensional statevector, where $n$ is the number of qubits and all the terms are zero except for the $i + 1$th index, where $i$ is the number in decimal. \n",
     "\n",
-    "Note to Adam: Rewrite the fuck out of this. Start with 1 qubit statevector and move from there"
+    "Note to Adam: Rewrite this completely!!!"
    ]
   },
   {
