--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -556,23 +556,23 @@
     "  \n",
     "      2.\n",
     "  \\begin{equation}\n",
-    "  (|\\psi> + |\\phi>) + |\\omega> = (|\\psi> + |\\omega>) + |\\phi>\n",
+    "  (|\\psi> + |\\phi>) = |\\omega> = (|\\psi> + |\\omega>) + |\\phi>\n",
     "  \\end{equation}\n",
     "  \n",
     "   #### Scalar Multiplication\n",
     "       1.\n",
     "  \\begin{equation}\n",
-    "  (c_1 + c_2)|\\psi> + c_1|\\psi> + c_2|\\psi>\n",
+    "  (c_1 + c_2)|\\psi> = c_1|\\psi> + c_2|\\psi>\n",
     "  \\end{equation}      \n",
     "       \n",
     "       2.\n",
     "  \\begin{equation}\n",
-    "  c_1(c_2)|\\psi> + (c_1 c_2)|\\psi> \n",
+    "  c_1(c_2)|\\psi> = c_2(c_1)|\\psi> \n",
     "  \\end{equation}          \n",
     "       \n",
     "       3.\n",
     "  \\begin{equation}\n",
-    "  (c_1)(|\\psi> + |\\phi>) = + c_1|\\psi> + c_1|\\phi>\n",
+    "  (c_1)(|\\psi> + |\\phi>) = c_1|\\psi> + c_1|\\phi>\n",
     "  \\end{equation}    \n",
     "       \n",
     "       4.\n",
@@ -809,7 +809,7 @@
     "   As you can clearly see, unlike a bra-ket, the result is a matrix. This matrix is what is known as the density matrix in quantum mechanics and is used as a projection operator. Let's say we have a density matrix $M = |v><u|$ that acts on state $\\psi$. The transformation it does is\n",
     "   \n",
     "   \\begin{equation}\n",
-    "   M\\psi = (|v><u|)\\psi = |v> <u|\\psi>\n",
+    "   M|\\psi> = (|v><u|)|\\psi> = |v> <u|\\psi>\n",
     "   \\end{equation}\n",
     "   \n",
     "   \n",
@@ -1100,7 +1100,6 @@
    ],
    "source": [
     "#Kronicker-Delta Function which takes a list of numpy arrays\n",
-    "import numpy as np\n",
     "\n",
     "def kronDelta(vecSet):\n",
     "    #Creating an empty list that will soon be filled with all kronicker-delta values for a vectorset\n",
@@ -1193,7 +1192,7 @@
     " However, as described above, the principles of quantum mechanics are inherently random (non-deterministic), meaning that information (such as a bit) cannot be in a definite state, but rather in a linear combination of states defined by a statevector $|\\psi>$. In this case, given that there are only two possible states a, 1 or 0, a quantum bit's (or for short, qubit's) quantum state will be represented by a superposition (linear combination) of state $|0>$ and state |1>. Technically speaking, this would mean that a qubit is a two level quantum system represented by a ket in 2D Hilbert space:\n",
     " \n",
     " \\begin{equation}\n",
-    " |\\psi> = \\alpha |0> + \\beta |1>\n",
+    " |\\psi> = \\alpha |0\\rangle + \\beta |1>\n",
     " \\end{equation}\n",
     " \n",
     " where $\\alpha$ and $\\beta$ are amplitudes that are $\\in C$, and $|0>$ and $|1>$ are basis vectors which can be represented by the following matrices:\n",
@@ -1215,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1224,7 @@
        "       [1, 0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
